# Crypto-Guide-Agent

Crypto_Agent/crypto_trading_signal_predictor/: .env  main.py  pyproject.toml  tool_test.py
Crypto_Agent/crypto_trading_signal_predictor/Instructions/: main_agents.md
Crypto_Agent/crypto_trading_signal_predictor/tools/: any_info_about_any_coin_tool.py  apply_indicators_strategies_and_visualize.py  current_price.py  data_collector_tool.py  get_predictions_tool.py  news_about_crypto_tool.py  ohlcv_tool.py  swing_trading_tool.py
